updated: products, orders, carts endpoints updated for add swagger docs
